--- a/miao/package.json
+++ b/miao/package.json
@@ -39,7 +39,8 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/essential"     
+      "plugin:vue/essential",
+      "@vue/standard"
     ],
     "parserOptions": {
       "parser": "babel-eslint"
